src/test/deca/context/invalid/class/79-returnIncompatible2.deca
/* Description:
    teste la regle (3.24) (3.28)  de la vérification contextuelles
    Le type de retour de la méthode est incompatible

    Historique:
      cree le 22/01/2020
*/

class A {
  int a;
  float b;
  boolean methode(int d, float e){
    return 6;
  }

}
